progit/static/progit.css
body {
    padding: 0;
    margin: 0;
}

h4 {
    color: #CE5C00;
    font-size: 16px;
    margin: 0.8em 0 0.4em;
}

.message {
    color: green;
}

.errors {
    color: red;
}

.warnings {
    color: orange;
}

.nobutton {
    background:none!important;
    border:none;
    padding:0!important;
    color: #0066CC;
    text-decoration: none;
}

#header input {
    border-radius: 10px;
}

.right {
    float:right!important;
}

header#mainheader{
    color: white;
    background: #426ead; /* Old browsers */
    background: -moz-linear-gradient(top, #426ead 0%, #1e4a88 100%); /* FF3.6+ */
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#426ead), color-stop(100%,#1e4a88)); /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(top, #426ead 0%,#1e4a88 100%); /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(top, #426ead 0%,#1e4a88 100%); /* Opera 11.10+ */
    background: -ms-linear-gradient(top, #426ead 0%,#1e4a88 100%); /* IE10+ */
    background: linear-gradient(to bottom, #426ead 0%,#1e4a88 100%); /* W3C */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#426ead', endColorstr='#1e4a88',GradientType=0 ); /* IE6-9 */
    padding: .5em;
    margin-bottom: .5em;
}


div.horizontal-menu {
    background-color: #EDEDED;
    border-radius: 10px;
    height: 3em;
}

div.horizontal-menu ul {
    float: left;
    margin: 0;
    padding: 0;
}

div.horizontal-menu li {
    display: inline;
    float: left;
}

div.horizontal-menu a {
    color: #4D4D4D;
    display: block;
    font-size: 1.1em;
    font-weight: bold;
    padding: 0.61em;
}

div.horizontal-menu li.selected a, div.horizontal-menu li.hovered a {
    background: url("pink_arrow.png") no-repeat scroll center bottom rgba(0, 0, 0, 0);
}

div.horizontal-menu li.selected a, div.horizontal-menu li.left-for-now a {
    color: #DB3279;
    margin-left: auto;
    margin-right: auto;
}

header h1,
header h2,
header p {
    margin:0;
}

header h1 span {
    float: right;
    color: rgba(255, 255, 255, .5);
    font-size: 0.7em;
    font-weight: normal;
}

#goto_date {
    display: block;
}

#goto_date input[type=text] {
    width: 42px;
}

#tzones {
    width: 152px;
}

section header,
section aside,
section nav {
    display: inline-block;
    vertical-align: middle;
}

#content section > header {
    margin-bottom: .5em;
    background: url(calendar.png) 0 50% no-repeat;
    padding-left: 40px;
    color: #666;
}

#content section > header p {
    font-style: italic;
}

#content {
    position: relative;
    margin: .5em;
    min-height: 450px;
}

#content #agenda, #content #meeting_list{
    padding-left: 210px;
}

#agenda, .my_meetings {
    margin-bottom: 2em;
}

#agenda table, .my_meetings table {
    border-collapse:collapse;
    min-width: 790px;
    width: 100%;
}

.event {
    display: block;
    padding:.1em .2em;
    background-color:rgba(175, 221, 233, .8);
    color: #333;
    text-decoration: none;
    border:1px solid #37abc8;
}

td > .event {
    height: 100%;
}


.first_event {
    border-bottom:0px;
}

td .first_event {
    border-bottom: solid 1px rgba(175, 221, 233, .8);
}

td .middle_event {
    border-top: solid 1px rgba(175, 221, 233, .8);
    border-bottom: solid 1px rgba(175, 221, 233, .8);
}

.last_event {
    border-top:0px;
}

td .last_event {
    border-top: solid 1px rgba(175, 221, 233, .8);
}

.my_meetings td {
    border-bottom: solid 1px grey;
    border-top: solid 1px grey;
    border-left: solid 1px grey;
}

#agenda td {
    min-width: 100px;
    height: 2em;
    border: 1px solid #e6e6e6;
    background-color: #f9f9f9;
    padding: 0;
}

#agenda td.empty {
    background-color: transparent;
    border: none;
}

#agenda .time {
    border: none;
    padding-right: .2em;
    text-align: right;
    width: 7em;
}

#agenda .today {
    background-color: #FFF6D5;
    vertical-align: middle;
}

.my_meetings .date {
    border-left: solid 0px;
    width: 100px;
}

.my_meetings .time {
    width: 150px;
}

.my_meetings .calendar {
    width: 150px;
}

.my_meetings .buttons {
    width: 1%;
    white-space: nowrap;
    text-align: center;
    padding: .1em .2em;
}

.my_meetings img {
    width: 24px;
}

#agenda th {
    border: none;
    padding: .1em;
    color: #999;
}

#agenda th.today {
    color: black;
}

#mainmenu {
    width: 200px;
    margin-right: 0;
    position: absolute;
    top: 70px;
    left: 0;
}

#mainmenu li {
    margin-left: 0px;
}

#weeks {
    float:right;
}

/** Menu */
.ui-menu-item ul {
    margin-left: 2px;
}

.ui-menu-item {
    white-space: nowrap;
}


table.month {
    margin: 0 auto;
    border-collapse: collapse;
    margin-bottom: .5em;
}

table.month td {
    text-align: center;
    border: 1px solid #e6e6e6;
    color: #808080;
    font-weight: bold;
    padding: .1em;
    background-color: #fff;
}

table.month a{
    color: #808080;
    display: block;
    padding: .1em;
}

.busy_day {
    background-color: #3C6EB4;
    border-radius: 1em 1em 1em 0.3em;
    color: #FFFFFF !important;
    padding: 0px;
    margin: 0px;
}

.busy_day a{
    color: #FFFFFF !important;
    padding: .1em;
}

table.month .today a{
    color: #000;
}

table.month .current_week td {
    background-color: #ffcc69;
}

table.month td.noday {
    background-color: #f9f9f9;
}

table.month td.today{
    background-color: #FFF6D5;
    border-color: #000;
    border-width: 1px;
    /* ugly hack to work with table collapsed borders */
    border-style: double solid solid double;
    color: #000;
}

th.month {
    color: #666;
    padding-bottom: .4em;
}

th.month a {
    color: #4d4d4d;
    display: inline-block;
}

th.month a:hover {
    color: #fff;
}

th.month .ui-button-text {
    padding: 0 .5em;
}

.ui-menu a.ui-state-focus {
    border: 1px solid #DDDDDD;
}

.project_list {
    display: table;
    border-spacing: 1em;
}

.project_link {
    border: 1px solid #CCCCCC;
    border-radius: 5px 5px 5px 5px;
    color: black;
    display: table-cell;
    /*margin: 1em auto;*/
    overflow: hidden;
    padding: 2em;
    /*width: 15em;*/
}

.project_link img, .project_link span {
    display: block;
}

.project_name {
    font-weight: bold;
    margin: .5em 0;
}

.project_row {
    display: table-row;
}

.project_row[a] {
    display: block;
}

#information {
    width: 500px;
    height: 200px;
}

.ui-autocomplete {
    width: 100px;
}

.limit_future td {
    border-top: thin solid;
    border-color: #31a90c;
}

.limit_past td {
    border-top: thin solid;
    border-color: red;
}
.today {
    background-color: #FFF6D5;
}

.readme {
    border-style:solid;
    border-width:5px;
    border-color:#adadad;
    padding-left:1em;
}

.docs_content {
    border-style:solid;
    border-width:2px;
    border-color:#3979D3;
    padding-left:1em;
    min-height: 400px;
}

.sep {
    background: #adadad no-repeat scroll center;
    margin:auto;
    width:50em;
    height:2px;
    margin-top:1em;
    margin-bottom:1em;
}

.inline h2, .inline a, .inline li{
    display: inline-block;
}

#comment {
   min-width: 500px;
   min-height: 120px;
}

#issue_content {
    min-width: 500px;
    min-height: 120px;
}

#ssh_key {
    min-width: 500px;
    min-height: 120px;
}


.delete_icon {
  padding-left: 20px !important;
  background-image: url(delete.png);
  background-repeat: no-repeat;
  background-position: 0px 50%;
}

.code_table {
    background: #f8f8f8;
    min-width: 100%;
}

.code_table tr td{
    padding: 0;
}

.code_table tr td pre{
    padding: 0;
    margin: 0;
}

.code_table tr .cell1{
    width: 20px;
}


.git_links {
    padding-top: 3em;
}

.prc {
    width: 13px;
}

.prc p {
    padding:0;
    margin:0;
}

.prc img {
    display: none;
    cursor: pointer;
}

.pr_comment {
    background: #fff;
}

.del_icon {
    display: inline;
}

/* Stealed this from flask-admin */
form.icon button {
    background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
    border: medium none;
    line-height: normal;
    padding: 0;
    padding-left: 0.5em;
    text-decoration: none;
}

.avatar {
    vertical-align: middle;
}

.circle {
    border-radius: 50%;
}

.settings div {
    padding: 0em 0em 1em 0em;
}

.list_users form,
.list_groups form  {
    display: inline;
}

pre {
    font-size: 1.3em;
}

.tree_list li.folder {
    list-style-image: url(images/folder.png);
}

.tree_list li.file {
    list-style-image: url(images/file.png);
}

.tree_list .view_commit,
.tree_list .filehex
{
    float: right;
    text-align: right;
}

.tree_list li:nth-child(odd),
.commit_list li:nth-child(odd)
{
    background-color: #ededed;
}

.tree_list ul {
    padding-left: 25px;
}

.commit_list ul {
    padding-left: 0;
}

.commit_list li {
    list-style-type: none;
}

.commit_list li,
.tree_list li {
    padding:0 .5em;
}

.tree_list li:hover,
.commit_list li:hover
{
    color: white;
    background-color: #0066cc;
}

.tree_list li:hover a,
.commit_list li:hover a,
.commit_list li:hover > a > span.commitid,
.tree_list li:hover > a > span.filehex
{
    color:white;
}
.commit_list li > a:first-child,
.tree_list li > a:first-child {
    display: block;
}

.commit_list li > a > span.commitid,
.tree_list li > a > span.filehex
{
    color: #4d4d4d;
    display: inline-block;
    width: 5em;
}

.pr {
    float: right;
}

